--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </li>
         <li>
           <a href="#convierteteEnOrador">
-            <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Convertite en Orador</span>
-            <span class="d-none d-xl-block">Convertite en Orador</span>
+            <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Convíertete en Orador</span>
+            <span class="d-none d-xl-block">Convíertete en Orador</span>
           </a>
         </li>
         <li>
-          <a href="./pages/comprar_tickets.html">
+          <a href="./pages/comprar_tickets.html" class="text-success">
             <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Comprar Tickets</span>
             <span class="d-none d-xl-block">Comprar Tickets</span>
           </a>
@@ -58,7 +58,7 @@
 
   </header>
 
-  <main class="d-flex flex-column gap-8 bg-white">
+  <main class="d-flex flex-column gap-5 bg-white">
 
     <section id="laConferencia" class="carousel_container">
 
@@ -95,7 +95,10 @@
 
     </section>
 
-    <h2 class="fw-bold fs-1 text-center text-uppercase">Conoce a los Oradores</h2>
+    <section>
+      <h5 class="text-uppercase text-center">Conoce a los</h5>
+      <h1 class="fw-bold text-uppercase text-center mb-2">Oradores</h3>
+    </section>
 
     <section id="losOradores" class="d-block container">
 
@@ -103,32 +106,38 @@
 
         <article class="orador_card">
           <img class="w-full" src="assets/img/steve.jpg" alt="Steve Jobs Foto" >
-          <div class="d-flex py-3 gap-2">
-            <span class="badge p-2 bg-danger">Assembly</span>
-            <span class="badge p-2 bg-info">SEO</span>
+          <div class="px-4">
+            <div class="d-flex py-3 gap-2">
+              <span class="badge p-2 bg-danger">Assembly</span>
+              <span class="badge p-2 bg-info">SEO</span>
+            </div>
+            <h2>Steve Jobs</h2>
+            <p>Empresario y visionario de la tecnología. Co-fundador de Apple Inc. y líder en la revolución de la computación personal. Diseñador de productos icónicos como el Mac, iPod, iPhone y iPad. Su legado perdura en la cultura tecnológica moderna.</p>
           </div>
-          <h2>Steve Jobs</h2>
-          <p>Empresario y visionario de la tecnología. Co-fundador de Apple Inc. y líder en la revolución de la computación personal. Diseñador de productos icónicos como el Mac, iPod, iPhone y iPad. Su legado perdura en la cultura tecnológica moderna.</p>
         </article>
 
         <article class="orador_card">
           <img class="w-full" src="assets/img/bill.jpg" alt="Steve Jobs Foto" >
-          <div class="d-flex py-3 gap-2">
-            <span class="badge p-2 bg-danger">Basic</span>
-            <span class="badge p-2 bg-info">SEO</span>
+          <div class="px-4">
+            <div class="d-flex py-3 gap-2">
+              <span class="badge p-2 bg-danger">Basic</span>
+              <span class="badge p-2 bg-info">SEO</span>
+            </div>
+            <h2>Bill Gates</h2>
+            <p>Cofundador de Microsoft, líder en la revolución de la informática. Filántropo y visionario tecnológico. Contribuyó a la popularización de la PC y desarrollo del software moderno.</p>
           </div>
-          <h2>Bill Gates</h2>
-          <p>Cofundador de Microsoft, líder en la revolución de la informática. Filántropo y visionario tecnológico. Contribuyó a la popularización de la PC y desarrollo del software moderno.</p>
         </article>
 
         <article class="orador_card">
           <img class="w-full" src="assets/img/ada.jpeg" alt="Steve Jobs Foto" >
-          <div class="d-flex py-3 gap-2">
-            <span class="badge p-2 bg-danger">Matematica</span>
-            <span class="badge p-2 bg-info">Inovadora</span>
+          <div class="px-4">
+            <div class="d-flex py-3 gap-2">
+              <span class="badge p-2 bg-danger">Matematica</span>
+              <span class="badge p-2 bg-info">Inovadora</span>
+            </div>
+            <h2>Ada Lovelace</h2>
+            <p>Pionera en la informática, matemática británica. Primera programadora de la historia, trabajó en la Máquina Analítica de Charles Babbage. Su legado perdura en la historia de la tecnología.</p>
           </div>
-          <h2>Ada Lovelace</h2>
-          <p>Pionera en la informática, matemática británica. Primera programadora de la historia, trabajó en la Máquina Analítica de Charles Babbage. Su legado perdura en la historia de la tecnología.</p>
         </article>
 
       </div>
@@ -147,16 +156,17 @@
       </div>
 
       <div class="bg-dark text-white">
-        <h2>Bs As - Octubre</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis animi assumenda reprehenderit tenetur quis voluptas, illo dicta nostrum sed consequatur maxime dolorum sint eius totam distinctio aspernatur ab, libero fuga! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto recusandae eaque minima perferendis iste possimus dignissimos, quam vitae dolores perspiciatis adipisci voluptas soluta nihil incidunt ullam suscipit aperiam. Aliquam, aut!</p>
+        <h2 class="fw-semibold">Bs As - Octubre</h2>
+        <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses.Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km de superficie).</p>
         <button class="btn btn-outline-light">Conoce Mas</button>
       </div>
 
     </section>
 
     <section id="convierteteEnOrador" class="container d-flex flex-column align-items-center mb-8">
-      <h3 class="fw-bold fs-3 text-uppercase text-center">Convertite en un Orador</h3>
-      <p class="text-center">Anótate cómo orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
+      <h5 class="text-uppercase text-center">Convíertete en un</h5>
+      <h1 class="fw-bold text-uppercase text-center mb-2">Orador</h1>
+      <p class="text-center">Anótate cómo orador para dar una <span class="dotted">charla ignite.</span> Cuéntanos de qué quieres hablar!</p>
       <form>
         <div class="flex-md-row">
           <input class="form-control" name="nombre" type="text" placeholder="Nombre">
@@ -169,14 +179,28 @@
     </section>
 
   </main>
-  <footer class="text-white-50 d-flex justify-content-around py-4 fw-semibold flex-wrap">
-    <small>Preguntas Frecuentes</small>
-    <small>Contáctanos</small>
-    <small>Prensa</small>
-    <small>Conferencias</small>
-    <small>Términos y Condiciones</small>
-    <small>Privacidad</small>
-    <small>Estudiantes</small>
+  <footer class="text-white-50 d-flex py-4 fw-semibold flex-column gap-4">
+    <div class="d-flex justify-content-around flex-wrap">
+      <small>Preguntas Frecuentes</small>
+      <small>Contáctanos</small>
+      <small>Prensa</small>
+      <small>Conferencias</small>
+      <small>Términos y Condiciones</small>
+      <small>Privacidad</small>
+      <small>Estudiantes</small>
+    </div>
+    <div class="d-flex align-items-center justify-content-center justify-content-sm-between gap-3 px-5 flex-wrap">
+      <a href="https://github.com/AlexQS96" target="_blank" rel="noreferrer noopener">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#fff">
+          <title>Github</title>
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z">
+          </path>
+        </svg>
+      </a>
+
+      <small>© 2023 - Gobierno de la Ciudad</small>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
