--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -39,12 +39,12 @@
         </li>
         <li>
           <a href="../index.html#convierteteEnOrador">
-            <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Convertite en Orador</span>
-            <span class="d-none d-xl-block">Convertite en Orador</span>
+            <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Convíertete en Orador</span>
+            <span class="d-none d-xl-block">Convíertete en Orador</span>
           </a>
         </li>
         <li>
-          <a href="comprar_tickets.html">
+          <a href="comprar_tickets.html" class="text-success">
             <span class="d-xl-none" data-bs-toggle="collapse" data-bs-target="#menu">Comprar Tickets</span>
             <span class="d-none d-xl-block">Comprar Tickets</span>
           </a>
@@ -59,17 +59,31 @@
   </header>
 
   <main class="d-flex flex-column gap-8 bg-white">
-    
+    <h1 class="text-center fw-semibold py-5">Pagina en Contrucción</h1>
   </main>
 
-  <footer class="text-white-50 d-flex justify-content-around py-4 fw-semibold flex-wrap">
-    <small>Preguntas Frecuentes</small>
-    <small>Contáctanos</small>
-    <small>Prensa</small>
-    <small>Conferencias</small>
-    <small>Términos y Condiciones</small>
-    <small>Privacidad</small>
-    <small>Estudiantes</small>
+  <footer class="text-white-50 d-flex py-4 fw-semibold flex-column gap-4">
+    <div class="d-flex justify-content-around flex-wrap">
+      <small>Preguntas Frecuentes</small>
+      <small>Contáctanos</small>
+      <small>Prensa</small>
+      <small>Conferencias</small>
+      <small>Términos y Condiciones</small>
+      <small>Privacidad</small>
+      <small>Estudiantes</small>
+    </div>
+    <div class="d-flex align-items-center justify-content-center justify-content-sm-between gap-3 px-5 flex-wrap">
+      <a href="https://github.com/AlexQS96" target="_blank" rel="noreferrer noopener">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="#fff">
+          <title>Github</title>
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z">
+          </path>
+        </svg>
+      </a>
+
+      <small>© 2023 - Gobierno de la Ciudad</small>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="../js/index.js"></script>
