--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -59,7 +59,7 @@
   </header>
 
   <main class="d-flex flex-column gap-8 bg-white">
-    <h1 class="text-center fw-semibold py-5">Pagina en Contrucción</h1>
+    <h1 class="text-center fw-semibold py-5">Pagina en Construcción</h1>
   </main>
 
   <footer class="text-white-50 d-flex py-4 fw-semibold flex-column gap-4">
