uploading ticket function

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   </main>
   <footer class="text-white-50 d-flex py-4 fw-semibold flex-column gap-4">
-    <div class="d-flex justify-content-around flex-wrap">
+    <div class="d-flex justify-content-sm-between justify-content-around flex-wrap px-5">
       <small>Preguntas Frecuentes</small>
       <small>Contáctanos</small>
       <small>Prensa</small>
